--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   user_repository:
     path: packages/user_repository
   go_router: ^14.6.3
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   bloc_test: ^9.0.0
@@ -72,8 +73,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
